--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -2,6 +2,8 @@
 
 === Identity Provider Endpoints
 
+IdP metadata MUST include a `<SingleSignOnService>` endpoint that supports the SAML2 HTTP-Redirect binding as defined in <<SAML2Bind>>. A `<SingleSignOnService>` endpoint that supports the SAML2 HTTP-POST binding SHOULD also be included in IdP metadata since some SAML SP deployments favor that particular binding. Support for both bindings is strongly RECOMMENDED.
+
 The endpoints at which an Identity Provider receives a `<saml2p:AuthnRequest>` message, and all subsequent exchanges with the user agent, SHOULD be protected by TLS/SSL. Identity Providers MAY omit the verification of signatures in conjunction with this binding.
 
 In verifying the Service Provider's Assertion Consumer Service, it is RECOMMENDED that the Identity Provider perform a case-sensitive string comparison between the requested `<saml2p:AssertionConsumerServiceURL>` value and the values found in the Service Provider's metadata. It is OPTIONAL to apply any form of URL canonicalization, which means the Service Provider SHOULD NOT rely on differently canonicalized values in these two locations. 
@@ -12,22 +14,41 @@ Identity Providers that act as a proxy (per section 3.4.1.5.1 of <<SAML2Core>>) 
 
 === Identity Provider Error URLs
 
+IdP deployers MUST include an `<errorURL>` XML attribute in metadata. This URL must point to a page that presents actions for a user to take at their organization in response to an error (that occurred at the SP).
+
+_(Note, Tom S. questions whether this should be in the errorURL vs. mdui.information elements, due in part to the lack of international language support on the errorURL)_
+
+_(move?)_ Relying parties are encouraged to direct clients to this URL – either directly or after presenting a page providing context – when an authentication error occurs that the Relying Party cannot resolve locally.
+
 === Subject Identifier Support
 
 ==== NameID formats
 _(new)_
-Identity Providers MUST support the `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` name identifier format <<SAML2Core>>. ~~They SHOULD support the `urn:oasis:names:tc:SAML:2.0:nameid-format:persistent` name identifier format <<SAML2Core>>.~~ Support for other formats is OPTIONAL.
+
+Identity Providers MUST support the `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` name identifier format as defined in <<SAML2Core>>. ~~They SHOULD support the `urn:oasis:names:tc:SAML:2.0:nameid-format:persistent` name identifier format <<SAML2Core>>.~~ Support for other formats is OPTIONAL.
 
 ==== Subject Identifier Attributes
 _(new)_
+
 Identity Providers SHOULD assert either the `urn:oasis:names:tc:SAML:attribute:subject-id` and `urn:oasis:names:tc:SAML:attribute:pairwise-id` attributes to uniquely identify authenticated users as defined in <<SAML2SubjId>> consistent with the requirements signalling from the SP, which are also defined in <<SAML2SubjId>>. If an Identity Provider cannot include a required Subject Identifier attribute as signalled by the SP, the IdP MUST return a SAML error per <<SAML2Err>>.  
 
 ==== Subject Identifier Signalling
 
 _(This is now handled in the Subject ID Draft in OASIS. Does it need to be repeated here?)_
+
 ~~The `<saml2:Subject>` element of the assertions issued by an Identity Provider SHOULD contain a `<saml2:NameID>` element. The `<saml2:Subject>` element MUST NOT include a `<saml2:BaseID>` nor a `<saml2:EncryptedID>`. In the absence of a `<saml2p:NameIDPolicy>` Format attribute in the Service Provider's `<saml2p:AuthnRequest>` message, or a `<md:NameIDFormat>` element in the Service Provider's metadata, the Format of the `<saml2:NameID>` SHOULD be set to `urn:oasis:names:tc:SAML:2.0:nameid-format:transient`.~~
 
 === Forced Re-Authentication Support
+
+Identity providers MUST ensure that any response to an `<AuthnRequest>` that contains the attribute `ForceAuthn ="true"` (as defined in <<SAML2Prof>>) results in an authentication challenge that requires proof that the Subject is present. If this condition is met, the IdP MUST also reflect this success by setting the value of the `AuthnInstant` value in the assertion it generates.
+
+If the IdP cannot prove Subject presence, the IdP MUST NOT generate a successful response and MUST generate a SAML Error. 
+
+_(Probably should be moved to the_ SP requirements _section)_
+
+Service Providers that request `ForceAuthn="true"` as part of `<AuthnRequests>` SHOULD test the currency of the `AuthnInstant` value contained in IdP assertion to verify that the currency of the user authentication event. 
+
+_This is necessary because clients can generate IdP-initiated authentication requests that do not specify `ForceAuthn="true"`, potentially bypassing the SP's intent to request reauthentication of the user._
 
 === Attributes
 
