--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -132,3 +132,17 @@ _This is necessary because clients can generate unsolicited SSO responses that d
 === XML Encryption
 
 Service Providers MUST support decryption of SAML V2.0 Web SSO Profile assertions using XML Encryption. Service Providers MUST support the AES-GCM block encryption algorithm as specified in <<XMLEnc>> for this encryption.
+
+=== Single LogOut
+
+Service Providers should expect that Identity Providers may do one of the following when receiving a SAML LogOut request:
+
+1. Do nothing.
+2. End the IDP session only.
+3. Complete logout of all SP sessions (Single LogOut).
+4. Partial logout (some SPs may not support LogOut).
+5. Display a confirmation page before proceeding with options 1-4.
+
+Service Providers MUST NOT expect to regain control of the user interface after a logout request is sent.
+
+Service Providers whose endpoints are based on multiple vhosts within a single entity descriptor should usually avoid Single LogOut.
