--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -64,12 +64,10 @@ Identity Providers MUST support the HTTP-Redirect binding <<SAML2Bind>> or the H
 
 When an Identity Provider cannot terminate the user's Identity Provider session, it MUST respond to the original requester, if any, with a `<samlp:LogoutResponse>` message containing a top-level `<saml:StatusCode>` of `urn:oasis:names:tc:SAML:2.0:status:Responder`.
 
-==== Behavior
+==== Behavior 
 
-Identity Providers MUST do one of the following when receiving a SAML Logout request:
+Identity Providers MUST allow the user to terminate the user's Identity Provider session in response to receiving a SAML Logout request. Identity Providers MAY allow the user the option to maintain their Identity Provider session rather than unilaterally terminating it.
 
-1. Terminate the user's Identity Provider session and all Service Provider sessions for the user (Single Logout). The user should be informed that they have been logged out of everything. If possible, the user should be presented a list of the services from which they have been logged out.
-2. Terminate the user's Identity Provider session and as many Service Provider sessions for the user as possible (Partial Logout). The user should be informed that they have NOT been logged out of everything. If possible, the user should be presented a list of the services from which they have been logged out.
-3. Terminate the user's Identity Provider session only. The user should be informed that they have NOT been logged out of everything.
+Identity Providers MAY additionally attempt to terminate some or all of the user's Service Provider sessoins (Single Logout). 
 
-Identity Providers MAY display a confirmation page to the user before proceeding with logout.
+After performing all logout functions, the user SHOULD be informed whether or not they have been logged out of all Service Provider sessions. If possible, the user should be presented a list of the services from which they have been logged out.
