--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -2,29 +2,29 @@
 
 === Web Browser SSO
 
-IdPs MUST support the Browser SSO Profile <<SAML2Prof>>.
+[SDP-IDP01]:: IdPs MUST support the Browser SSO Profile <<SAML2Prof>>.
 
 ==== Requests
 
 ===== Binding
 
-IdPs MUST support the HTTP-Redirect binding <<SAML2Bind>> for the receipt of `<samlp:AuthnRequest>` messages.
+[SDP-IDP02]:: IdPs MUST support the HTTP-Redirect binding <<SAML2Bind>> for the receipt of `<samlp:AuthnRequest>` messages.
 
-The endpoint(s) at which an IdP supports receipt of `<samlp:AuthnRequest>` messages MUST be protected by TLS/SSL.
+[SDP-IDP03]:: The endpoint(s) at which an IdP supports receipt of `<samlp:AuthnRequest>` messages MUST be protected by TLS/SSL.
 
 ===== Endpoint Verification
 
-When verifying the `AssertionConsumerServiceURL`, it is RECOMMENDED that the IdP perform a case-sensitive string comparison between the requested value and the values found in the SP's metadata. It is OPTIONAL to apply any form of URL canonicalization.
+[SDP-IDP04]:: When verifying the `AssertionConsumerServiceURL`, it is RECOMMENDED that the IdP perform a case-sensitive string comparison between the requested value and the values found in the SP's metadata. It is OPTIONAL to apply any form of URL canonicalization.
 
 ===== Signing
 
-If a request is signed, IdPs MUST verify the signature or fail the request. An IdP MAY handle a signature verification failure locally rather than via an error response to the SP.
+[SDP-IDP05]:: If a request is signed, IdPs MUST verify the signature or fail the request. An IdP MAY handle a signature verification failure locally rather than via an error response to the SP.
 
-IdPs MUST reject unsigned requests in the event that an SP's metadata includes an `AuthnRequestsSigned` attribute set to `true` or `1`.
+[SDP-IDP06]:: IdPs MUST reject unsigned requests in the event that an SP's metadata includes an `AuthnRequestsSigned` attribute set to `true` or `1`.
 
 ===== Forced Re-Authentication
 
-IdPs MUST ensure that any response to a `<samlp:AuthnRequest>` that contains the attribute `ForceAuthn` set to `true` or `1` results in an authentication challenge that requires proof that the subject is present. If this condition is met, the IdP MUST also reflect this by setting the value of the `AuthnInstant` value in the assertion it returns to a fresh value.
+[SDP-IDP07]:: IdPs MUST ensure that any response to a `<samlp:AuthnRequest>` that contains the attribute `ForceAuthn` set to `true` or `1` results in an authentication challenge that requires proof that the subject is present. If this condition is met, the IdP MUST also reflect this by setting the value of the `AuthnInstant` value in the assertion it returns to a fresh value.
 
 If an IdP cannot prove subject presence, then it MUST fail the request and SHOULD respond to the SP with a SAML error status.
 
@@ -32,61 +32,61 @@ If an IdP cannot prove subject presence, then it MUST fail the request and SHOUL
 
 ===== Binding
 
-IdPs MUST support the HTTP-POST binding <<SAML2Bind>> for the transmission of `<samlp:Response>` messages.
+[SDP-IDP08]:: IdPs MUST support the HTTP-POST binding <<SAML2Bind>> for the transmission of `<samlp:Response>` messages.
 
 ===== Response Content
 
-Successful responses MUST be directly signed using a `<ds:Signature>` element within the `<samlp:Response>` element.
+[SDP-IDP09]:: Successful responses MUST be directly signed using a `<ds:Signature>` element within the `<samlp:Response>` element.
 
-Error responses MAY be signed or unsigned.
+[SDP-IDP10]:: Error responses MAY be signed or unsigned.
 
-Successful responses MUST contain one and only one SAML assertion, and the assertion MUST contain exactly one `<saml:AuthnStatement>` element and MAY contain zero or one `<saml:AttributeStatement>` elements. The assertion MAY be directly signed.
+[SDP-IDP11]:: Successful responses MUST contain one and only one SAML assertion, and the assertion MUST contain exactly one `<saml:AuthnStatement>` element and MAY contain zero or one `<saml:AttributeStatement>` elements. The assertion MAY be directly signed.
 
-In the event the HTTP-POST binding <<SAML2Bind>> is used, assertions MUST be encrypted and transmitted via a `<saml:EncryptedAssertion>` element. Information intended for the consumption of the SP MUST NOT be further encrypted via `<saml:EncryptedID>` or `<saml:EncryptedAttribute>` constructs.
+[SDP-IDP12]:: In the event the HTTP-POST binding <<SAML2Bind>> is used, assertions MUST be encrypted and transmitted via a `<saml:EncryptedAssertion>` element. Information intended for the consumption of the SP MUST NOT be further encrypted via `<saml:EncryptedID>` or `<saml:EncryptedAttribute>` constructs.
 
 ==== Subject Identifiers
 
-Assertions MUST contain a `<saml:NameID>` element with the `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` Format, as defined in <<SAML2Core>>, for the purposes of logout.
+[SDP-IDP13]:: Assertions MUST contain a `<saml:NameID>` element with the `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` Format, as defined in <<SAML2Core>>, for the purposes of logout.
 
-IdPs MUST support one or both of the SAML Attributes defined by <<SAML2SubjId>> for non-transient identification of subjects. Support for both is RECOMMENDED.
+[SDP-IDP14]:: IdPs MUST support one or both of the SAML Attributes defined by <<SAML2SubjId>> for non-transient identification of subjects. Support for both is RECOMMENDED.
 
 ===== Subject Identifier Requirements Signaling
 
-IdPs MUST support the metadata-based identifier requirement signaling mechanism defined in <<SAML2SubjId>>.
+[SDP-IDP15]:: IdPs MUST support the metadata-based identifier requirement signaling mechanism defined in <<SAML2SubjId>>.
 
-If an IdP cannot or will not satisfy the requirements of an SP in this respect, then it MUST fail the authentication request and SHOULD respond to the SP with a SAML error status.
+[SDP-IDP16]:: If an IdP cannot or will not satisfy the requirements of an SP in this respect, then it MUST fail the authentication request and SHOULD respond to the SP with a SAML error status.
 
-In the absence of any signaling by an SP, an IdP is free to supply either, both, or neither SAML Attribute, or to return an error as it sees fit.
+[SDP-IDP17]:: In the absence of any signaling by an SP, an IdP is free to supply either, both, or neither SAML Attribute, or to return an error as it sees fit.
 
 ==== Attributes
 
-`<saml:Attribute>` elements MUST contain a NameFormat of `urn:oasis:names:tc:SAML:2.0:attrname-format:uri`.
+[SDP-IDP18]:: `<saml:Attribute>` elements MUST contain a NameFormat of `urn:oasis:names:tc:SAML:2.0:attrname-format:uri`.
 
 _This requirement ensures unique, non-conflicting naming of Attributes even in cases involving custom requirements for which no standard Attributes may exist._
 
-It is RECOMMENDED that the content of `<saml:AttributeValue>` elements be limited to a single child text node (i.e., a simple string value).
+[SDP-IDP19]:: It is RECOMMENDED that the content of `<saml:AttributeValue>` elements be limited to a single child text node (i.e., a simple string value).
 
 === Single Logout
 
-IdPs MUST support the Single Logout Profile <<SAML2Prof>>.
+[SDP-IDP20]:: IdPs MUST support the Single Logout Profile <<SAML2Prof>>.
 
-The term "IdP session" is used to refer to the ongoing state between the IdP and its clients allowing for SSO. Support for logout implies supporting termination of a subject's IdP session in response to receiving a `<samlp:LogoutRequest>` or upon some administrative signal. IdPs MAY allow a subject the option to maintain their IdP session rather than unilaterally terminating it.
+[SDP-IDP21]:: _(IS THIS A SEPARATE REQUIREMENT?)_ The term "IdP session" is used to refer to the ongoing state between the IdP and its clients allowing for SSO. Support for logout implies supporting termination of a subject's IdP session in response to receiving a `<samlp:LogoutRequest>` or upon some administrative signal. IdPs MAY allow a subject the option to maintain their IdP session rather than unilaterally terminating it.
 
-IdPs MAY support the propagation of logout signaling to SPs.
+[SDP-IDP22]:: IdPs MAY support the propagation of logout signaling to SPs.
 
 ==== Requests
 
 ===== Binding
 
-The HTTP-Redirect binding [SAML2Bind] MUST be used for the transmission of `<samlp:LogoutRequest>` messages, in the event that propagation is supported.
+[SDP-IDP23]:: The HTTP-Redirect binding [SAML2Bind] MUST be used for the transmission of `<samlp:LogoutRequest>` messages, in the event that propagation is supported.
 
-IdPs MUST support the HTTP-Redirect [SAML2Bind] binding for the receipt of `<samlp:LogoutRequest>` messages.
+[SDP-IDP24]:: IdPs MUST support the HTTP-Redirect [SAML2Bind] binding for the receipt of `<samlp:LogoutRequest>` messages.
 
 ==== Request Content
 
-Requests MUST be signed.
+[SDP-IDP25]:: Requests MUST be signed.
 
-The `<saml:NameID>` element in `<samlp:LogoutRequest>` messages MUST NOT be encrypted.
+[SDP-IDP26]:: The `<saml:NameID>` element in `<samlp:LogoutRequest>` messages MUST NOT be encrypted.
 
 _The normative requirement for the use of transient identifiers is intended to obviate the need for XML Encryption._
 
@@ -94,27 +94,27 @@ _The normative requirement for the use of transient identifiers is intended to o
 
 ===== Binding
 
-The HTTP-Redirect binding [SAML2Bind] MUST be used for the transmission of `<samlp:LogoutResponse>` messages.
+[SDP-IDP27]:: The HTTP-Redirect binding [SAML2Bind] MUST be used for the transmission of `<samlp:LogoutResponse>` messages.
 
-IdPs MUST support the HTTP-Redirect [SAML2Bind] binding for the receipt of `<samlp:LogoutResponse>` messages, in the event that `<samlp:LogoutRequest>` propagation is supported.
+[SDP-IDP28]:: IdPs MUST support the HTTP-Redirect [SAML2Bind] binding for the receipt of `<samlp:LogoutResponse>` messages, in the event that `<samlp:LogoutRequest>` propagation is supported.
 
 ===== Response Content
 
-Responses MUST be signed.
+[SDP-IDP29]:: Responses MUST be signed.
 
-The `<samlp:StatusCode>` in the response issued by the IdP MUST reflect whether the IdP session was successfully terminated.
+[SDP-IDP30]:: The `<samlp:StatusCode>` in the response issued by the IdP MUST reflect whether the IdP session was successfully terminated.
 
 === Metadata and Trust Management
 
 ==== Support for Multiple Keys
 
-IdP deployments MUST support multiple signing certificates in SP metadata and MUST support validation of signatures using a key from any of them.
+[SDP-IDP30]:: IdP deployments MUST support multiple signing certificates in SP metadata and MUST support validation of signatures using a key from any of them.
 
 _These requirements make seamless key migration possible for both parties._
 
 ==== Metadata Content
 
-By virtue of this profile's requirements, an IdP's metadata MUST contain:
+[SDP-IDP31]:: By virtue of this profile's requirements, an IdP's metadata MUST contain:
 
 * an `<md:IDPSSODescriptor>` role element containing an `errorURL` attribute and an appropriate URL value
 ** at least one `<md:SingleSignOnService>` endpoint element
