--- a/edit/saml2int/common_requirements.adoc
+++ b/edit/saml2int/common_requirements.adoc
@@ -95,7 +95,7 @@ These certificates SHOULD be long-lived and self-signed. To avoid problems with 
 
 === Cryptographic Algorithms
 
-[SDP-ALG01]:: Deployments MUST support, and use, the following algorithms when communicating with peers in the context of this profile:
+[SDP-ALG01]:: Deployments MUST support, and use, the following algorithms when communicating with peers in the context of this profile. Where multiple choices exist, any of the listed options may be used. The profile will be updated as necessary to reflect changes in government and industry recommendations regarding algorithm usage.
 
 * Digest
 ** ```http://www.w3.org/2001/04/xmlenc#sha256``` <<XMLEnc>>
@@ -113,10 +113,8 @@ These certificates SHOULD be long-lived and self-signed. To avoid problems with 
 ** ```http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p``` <<XMLEnc>>
 ** ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc>> 
 
-[SDP-ALG02]:: The following default digest algorithm MUST be used in conjunction with the above key transport algorithms (the default mask generation function, MGF1 with SHA1, MUST be used):
+The following default digest algorithm MUST be used in conjunction with the above key transport algorithms (the default mask generation function, MGF1 with SHA1, MUST be used):
 
 * ```http://www.w3.org/2001/04/xmlenc#sha256``` <<XMLEnc>>
-
-This profile will be updated as necessary to reflect changes in government and industry recommendations regarding algorithm usage.
 
 _This profile cannot preclude the use of other algorithms when communicating with peers outside the scope of this profile, but the other algorithms in common use are generally considered to be weakening (e.g., SHA-1) or broken outright (e.g., RSA PKCS#1.5). Note that the use of AES-CBC block encryption algorithms remains widespread at the time of authoring, but are known to be broken <<XMLEncBreak>>._
